fixed common layout bug

--- a/css/layout.css
+++ b/css/layout.css
@@ -2395,11 +2395,6 @@ body.omni-print-style.receipt {
     line-height: 22px;
 }
 
-.omni-style .entity-details-list > li div,
-.omni-style .entity-details-list .panel-more > div > li div  {
-    float: left;
-}
-
 .omni-style .entity-details-list > li .list-sub-label.replacer,
 .omni-style .entity-details-list > li .list-sub-label.uploader,
 .omni-style .entity-details-list .panel-more > div > li .list-sub-label.replacer,
